[package]
name = "baxe"
version = "0.1.2"
edition = "2021"
description = "A library that simplifies error handling in Axum."
license = "MIT"
repository = "https://github.com/iltumio/baxe"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1"
axum = "0.7.7"
baxe-derive = { path = "../derive", version = "0.1.0" }

[dev-dependencies]
thiserror = "2"
