[package]
name = "baxe"
version = "0.1.6"
edition = "2021"
description = "A library that simplifies error handling in Axum."
license = "MIT"
repository = "https://github.com/zyphelabs/baxe"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = ">=0.7.0"
baxe-derive = { path = "../derive", version = "0.1.6" }

[dev-dependencies]
thiserror = "2"
